# MTUI

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: platform-support.yml  pypi-publish.yml  tests.yml
docs/: architecture.md  components.md  events.md  hooks.md
docs/superpowers/plans/: 2026-05-15-api-polish-plan.md
docs/superpowers/specs/: 2026-05-15-v0.4.0-phases-2-3-4.md
examples/: counter.py  dashboard.py  styling_showcase.py
plans/: features.md
src/cpp/: Bindings.cpp  Buffer.cpp  Buffer.hpp  Renderer.cpp  Renderer.hpp  Terminal.cpp  Terminal.hpp
src/python/rc_tui/: __init__.py  app.py  core.py  dom.py  hooks.py  input.py  layout.py  reconciler.py  render.py  widgets.py
src/python/rctui/: __init__.py  app.py  canvas.py  core.py  dom.py  events.py  hooks.py  input.py  layout.py  reconciler.py  render.py
tests/: agent_cli.py  conftest.py  demo_app.py  demo_features.py  demo_features_v2.py  demo_stylesheet.py  test_advanced_styling.py  test_cross_platform.py  test_framework.py  test_full_integration.py  test_slider.py  test_styling.py
