[project]
name = "rc-tui"
version = "0.2.2"
description = "High-performance React-inspired TUI library for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    {name = "Pomilon", email = "pomilon@proton.me"}
]
dependencies = [
    "pybind11>=2.12.0",
    "pyfiglet>=0.8.post1",
    "tree-sitter>=0.22.0,<0.24.0",
    "tree-sitter-python>=0.22.0,<0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "twine>=5.0.0"
]

[build-system]
requires = ["setuptools>=64", "wheel", "cmake>=3.20", "pybind11>=2.12.0", "ninja"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src/python"}
packages = ["rc_tui"]

[tool.cibuildwheel]
before-build = "pip install pybind11 cmake ninja"
build-verbosity = 1
skip = "cp36-* cp37-* cp38-* pp*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-command = "pytest {project}/tests"
test-requires = "pytest"
environment = { PYTHONPATH = "" }

